packages/atomic-fhirpath/src/generated/fhirpathParser.ts
// Generated from fhirpath.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { fhirpathListener } from "./fhirpathListener.js";
import { fhirpathVisitor } from "./fhirpathVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class fhirpathParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly T__27 = 28;
    public static readonly T__28 = 29;
    public static readonly T__29 = 30;
    public static readonly T__30 = 31;
    public static readonly T__31 = 32;
    public static readonly T__32 = 33;
    public static readonly T__33 = 34;
    public static readonly T__34 = 35;
    public static readonly T__35 = 36;
    public static readonly T__36 = 37;
    public static readonly T__37 = 38;
    public static readonly T__38 = 39;
    public static readonly T__39 = 40;
    public static readonly T__40 = 41;
    public static readonly T__41 = 42;
    public static readonly T__42 = 43;
    public static readonly T__43 = 44;
    public static readonly T__44 = 45;
    public static readonly T__45 = 46;
    public static readonly T__46 = 47;
    public static readonly T__47 = 48;
    public static readonly T__48 = 49;
    public static readonly T__49 = 50;
    public static readonly T__50 = 51;
    public static readonly T__51 = 52;
    public static readonly T__52 = 53;
    public static readonly T__53 = 54;
    public static readonly T__54 = 55;
    public static readonly DATE = 56;
    public static readonly DATETIME = 57;
    public static readonly TIME = 58;
    public static readonly IDENTIFIER = 59;
    public static readonly DELIMITEDIDENTIFIER = 60;
    public static readonly STRING = 61;
    public static readonly NUMBER = 62;
    public static readonly LONGNUMBER = 63;
    public static readonly WS = 64;
    public static readonly COMMENT = 65;
    public static readonly LINE_COMMENT = 66;
    public static readonly RULE_entireExpression = 0;
    public static readonly RULE_expression = 1;
    public static readonly RULE_term = 2;
    public static readonly RULE_literal = 3;
    public static readonly RULE_externalConstant = 4;
    public static readonly RULE_invocation = 5;
    public static readonly RULE_function = 6;
    public static readonly RULE_paramList = 7;
    public static readonly RULE_quantity = 8;
    public static readonly RULE_unit = 9;
    public static readonly RULE_dateTimePrecision = 10;
    public static readonly RULE_pluralDateTimePrecision = 11;
    public static readonly RULE_typeSpecifier = 12;
    public static readonly RULE_qualifiedIdentifier = 13;
    public static readonly RULE_identifier = 14;

    public static readonly literalNames = [
        null, "'.'", "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'div'", 
        "'mod'", "'&'", "'is'", "'as'", "'|'", "'<='", "'<'", "'>'", "'>='", 
        "'='", "'~'", "'!='", "'!~'", "'in'", "'contains'", "'and'", "'or'", 
        "'xor'", "'implies'", "'=>'", "'('", "')'", "'{'", "'}'", "'true'", 
        "'false'", "'%'", "'$this'", "'$index'", "'$total'", "','", "'year'", 
        "'month'", "'week'", "'day'", "'hour'", "'minute'", "'second'", 
        "'millisecond'", "'years'", "'months'", "'weeks'", "'days'", "'hours'", 
        "'minutes'", "'seconds'", "'milliseconds'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, "DATE", "DATETIME", "TIME", "IDENTIFIER", "DELIMITEDIDENTIFIER", 
        "STRING", "NUMBER", "LONGNUMBER", "WS", "COMMENT", "LINE_COMMENT"
    ];
    public static readonly ruleNames = [
        "entireExpression", "expression", "term", "literal", "externalConstant", 
        "invocation", "function", "paramList", "quantity", "unit", "dateTimePrecision", 
        "pluralDateTimePrecision", "typeSpecifier", "qualifiedIdentifier", 
        "identifier",
    ];

    public get grammarFileName(): string { return "fhirpath.g4"; }
    public get literalNames(): (string | null)[] { return fhirpathParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return fhirpathParser.symbolicNames; }
    public get ruleNames(): string[] { return fhirpathParser.ruleNames; }
    public get serializedATN(): number[] { return fhirpathParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, fhirpathParser._ATN, fhirpathParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public entireExpression(): EntireExpressionContext {
        let localContext = new EntireExpressionContext(this.context, this.state);
        this.enterRule(localContext, 0, fhirpathParser.RULE_entireExpression);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 30;
            this.expression(0);
            this.state = 31;
            this.match(fhirpathParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public expression(): ExpressionContext;
    public expression(_p: number): ExpressionContext;
    public expression(_p?: number): ExpressionContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ExpressionContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 2;
        this.enterRecursionRule(localContext, 2, fhirpathParser.RULE_expression, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 42;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
            case 1:
                {
                localContext = new TermExpressionContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 34;
                this.term();
                }
                break;
            case 2:
                {
                localContext = new PolarityExpressionContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 35;
                _la = this.tokenStream.LA(1);
                if(!(_la === 4 || _la === 5)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 36;
                this.expression(12);
                }
                break;
            case 3:
                {
                localContext = new LambdaExpressionContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 38;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 12589056) !== 0) || _la === 59 || _la === 60) {
                    {
                    this.state = 37;
                    this.identifier();
                    }
                }

                this.state = 40;
                this.match(fhirpathParser.T__27);
                this.state = 41;
                this.expression(1);
                }
                break;
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 84;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 82;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
                    case 1:
                        {
                        localContext = new MultiplicativeExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 44;
                        if (!(this.precpred(this.context, 11))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 11)");
                        }
                        this.state = 45;
                        _la = this.tokenStream.LA(1);
                        if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 960) !== 0))) {
                        this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 46;
                        this.expression(12);
                        }
                        break;
                    case 2:
                        {
                        localContext = new AdditiveExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 47;
                        if (!(this.precpred(this.context, 10))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 10)");
                        }
                        this.state = 48;
                        _la = this.tokenStream.LA(1);
                        if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 1072) !== 0))) {
                        this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 49;
                        this.expression(11);
                        }
                        break;
                    case 3:
                        {
                        localContext = new UnionExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 50;
                        if (!(this.precpred(this.context, 8))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 8)");
                        }
                        this.state = 51;
                        this.match(fhirpathParser.T__12);
                        this.state = 52;
                        this.expression(9);
                        }
                        break;
                    case 4:
                        {
                        localContext = new InequalityExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 53;
                        if (!(this.precpred(this.context, 7))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 7)");
                        }
                        this.state = 54;
                        _la = this.tokenStream.LA(1);
                        if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 245760) !== 0))) {
                        this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 55;
                        this.expression(8);
                        }
                        break;
                    case 5:
                        {
                        localContext = new EqualityExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 56;
                        if (!(this.precpred(this.context, 6))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 6)");
                        }
                        this.state = 57;
                        _la = this.tokenStream.LA(1);
                        if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 3932160) !== 0))) {
                        this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 58;
                        this.expression(7);
                        }
                        break;
                    case 6:
                        {
                        localContext = new MembershipExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 59;
                        if (!(this.precpred(this.context, 5))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 5)");
                        }
                        this.state = 60;
                        _la = this.tokenStream.LA(1);
                        if(!(_la === 22 || _la === 23)) {
                        this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 61;
                        this.expression(6);
                        }
                        break;
                    case 7:
                        {
                        localContext = new AndExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 62;
                        if (!(this.precpred(this.context, 4))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 4)");
                        }
                        this.state = 63;
                        this.match(fhirpathParser.T__23);
                        this.state = 64;
                        this.expression(5);
                        }
                        break;
                    case 8:
                        {
                        localContext = new OrExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 65;
                        if (!(this.precpred(this.context, 3))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 3)");
                        }
                        this.state = 66;
                        _la = this.tokenStream.LA(1);
                        if(!(_la === 25 || _la === 26)) {
                        this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 67;
                        this.expression(4);
                        }
                        break;
                    case 9:
                        {
                        localContext = new ImpliesExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 68;
                        if (!(this.precpred(this.context, 2))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 2)");
                        }
                        this.state = 69;
                        this.match(fhirpathParser.T__26);
                        this.state = 70;
                        this.expression(3);
                        }
                        break;
                    case 10:
                        {
                        localContext = new InvocationExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 71;
                        if (!(this.precpred(this.context, 14))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 14)");
                        }
                        this.state = 72;
                        this.match(fhirpathParser.T__0);
                        this.state = 73;
                        this.invocation();
                        }
                        break;
                    case 11:
                        {
                        localContext = new IndexerExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 74;
                        if (!(this.precpred(this.context, 13))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 13)");
                        }
                        this.state = 75;
                        this.match(fhirpathParser.T__1);
                        this.state = 76;
                        this.expression(0);
                        this.state = 77;
                        this.match(fhirpathParser.T__2);
                        }
                        break;
                    case 12:
                        {
                        localContext = new TypeExpressionContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, fhirpathParser.RULE_expression);
                        this.state = 79;
                        if (!(this.precpred(this.context, 9))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 9)");
                        }
                        this.state = 80;
                        _la = this.tokenStream.LA(1);
                        if(!(_la === 11 || _la === 12)) {
                        this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 81;
                        this.typeSpecifier();
                        }
                        break;
                    }
                    }
                }
                this.state = 86;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public term(): TermContext {
        let localContext = new TermContext(this.context, this.state);
        this.enterRule(localContext, 4, fhirpathParser.RULE_term);
        try {
            this.state = 94;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case fhirpathParser.T__10:
            case fhirpathParser.T__11:
            case fhirpathParser.T__21:
            case fhirpathParser.T__22:
            case fhirpathParser.T__35:
            case fhirpathParser.T__36:
            case fhirpathParser.T__37:
            case fhirpathParser.IDENTIFIER:
            case fhirpathParser.DELIMITEDIDENTIFIER:
                localContext = new InvocationTermContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 87;
                this.invocation();
                }
                break;
            case fhirpathParser.T__30:
            case fhirpathParser.T__32:
            case fhirpathParser.T__33:
            case fhirpathParser.DATE:
            case fhirpathParser.DATETIME:
            case fhirpathParser.TIME:
            case fhirpathParser.STRING:
            case fhirpathParser.NUMBER:
            case fhirpathParser.LONGNUMBER:
                localContext = new LiteralTermContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 88;
                this.literal();
                }
                break;
            case fhirpathParser.T__34:
                localContext = new ExternalConstantTermContext(localContext);
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 89;
                this.externalConstant();
                }
                break;
            case fhirpathParser.T__28:
                localContext = new ParenthesizedTermContext(localContext);
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 90;
                this.match(fhirpathParser.T__28);
                this.state = 91;
                this.expression(0);
                this.state = 92;
                this.match(fhirpathParser.T__29);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public literal(): LiteralContext {
        let localContext = new LiteralContext(this.context, this.state);
        this.enterRule(localContext, 6, fhirpathParser.RULE_literal);
        let _la: number;
        try {
            this.state = 106;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context) ) {
            case 1:
                localContext = new NullLiteralContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 96;
                this.match(fhirpathParser.T__30);
                this.state = 97;
                this.match(fhirpathParser.T__31);
                }
                break;
            case 2:
                localContext = new BooleanLiteralContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 98;
                _la = this.tokenStream.LA(1);
                if(!(_la === 33 || _la === 34)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                break;
            case 3:
                localContext = new StringLiteralContext(localContext);
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 99;
                this.match(fhirpathParser.STRING);
                }
                break;
            case 4:
                localContext = new NumberLiteralContext(localContext);
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 100;
                this.match(fhirpathParser.NUMBER);
                }
                break;
            case 5:
                localContext = new LongNumberLiteralContext(localContext);
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 101;
                this.match(fhirpathParser.LONGNUMBER);
                }
                break;
            case 6:
                localContext = new DateLiteralContext(localContext);
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 102;
                this.match(fhirpathParser.DATE);
                }
                break;
            case 7:
                localContext = new DateTimeLiteralContext(localContext);
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 103;
                this.match(fhirpathParser.DATETIME);
                }
                break;
            case 8:
                localContext = new TimeLiteralContext(localContext);
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 104;
                this.match(fhirpathParser.TIME);
                }
                break;
            case 9:
                localContext = new QuantityLiteralContext(localContext);
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 105;
                this.quantity();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public externalConstant(): ExternalConstantContext {
        let localContext = new ExternalConstantContext(this.context, this.state);
        this.enterRule(localContext, 8, fhirpathParser.RULE_externalConstant);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 108;
            this.match(fhirpathParser.T__34);
            this.state = 111;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case fhirpathParser.T__10:
            case fhirpathParser.T__11:
            case fhirpathParser.T__21:
            case fhirpathParser.T__22:
            case fhirpathParser.IDENTIFIER:
            case fhirpathParser.DELIMITEDIDENTIFIER:
                {
                this.state = 109;
                this.identifier();
                }
                break;
            case fhirpathParser.STRING:
                {
                this.state = 110;
                this.match(fhirpathParser.STRING);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public invocation(): InvocationContext {
        let localContext = new InvocationContext(this.context, this.state);
        this.enterRule(localContext, 10, fhirpathParser.RULE_invocation);
        try {
            this.state = 118;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
            case 1:
                localContext = new MemberInvocationContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 113;
                this.identifier();
                }
                break;
            case 2:
                localContext = new FunctionInvocationContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 114;
                this.function_();
                }
                break;
            case 3:
                localContext = new ThisInvocationContext(localContext);
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 115;
                this.match(fhirpathParser.T__35);
                }
                break;
            case 4:
                localContext = new IndexInvocationContext(localContext);
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 116;
                this.match(fhirpathParser.T__36);
                }
                break;
            case 5:
                localContext = new TotalInvocationContext(localContext);
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 117;
                this.match(fhirpathParser.T__37);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public function_(): FunctionContext {
        let localContext = new FunctionContext(this.context, this.state);
        this.enterRule(localContext, 12, fhirpathParser.RULE_function);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 120;
            this.identifier();
            this.state = 121;
            this.match(fhirpathParser.T__28);
            this.state = 123;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2965379120) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & 2139095103) !== 0)) {
                {
                this.state = 122;
                this.paramList();
                }
            }
